--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,11 @@
 	<string name="prompt_email">Email</string>
 	<string name="prompt_username">Username</string>
 	<string name="prompt_password">Password</string>
-	<string name="action_sign_in">Sign in or register</string>
+	<string name="action_sign_in">Sign in or create an account</string>
 	<string name="action_sign_in_short">Sign in</string>
 	<string name="error_invalid_email">This email address is invalid</string>
 	<string name="error_invalid_password">This password is too short</string>
+	<string name="error_invalid_username">This username is too short</string>
 	<string name="error_incorrect_password">This password is incorrect</string>
 	<string name="error_field_required">This field is required</string>
 	<string name="permission_rationale">"Contacts permissions are needed for providing email completions."
